#1526 Monitor integracions, integració servei monitor